# counterexample

./: Cargo.toml  metadata.json
contracts/script/: Counter.s.sol  Deploy.s.sol
counter/: Cargo.toml
counter/src/: lib.rs
pkg/: manifest.json
