[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.0"
alloy-primitives = "0.7.0"
alloy-rlp = "0.3.4"
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "cad7935" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "cad7935" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "cad7935" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "cad7935" }
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "b7c0abe" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
